<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotesShare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="string_pen">Pen</string>
    <string name="string_image">Image</string>
    <string name="string_undo">Undo</string>
    <string name="string_redo">Redo</string>
    <string name="string_save">Save</string>
    <string name="string_more">More</string>
    <string name="string_share">Share</string>
    <string name="string_update">Update</string>
    <string name="string_about">About</string>
    <string name="string_clear">Clear</string>
    <string name="string_feedback">Feedback</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="color">Color</string>

    <!-- pen size -->
    <string name="ftp">Fine Tip Pen</string>
    <string name="normal">Normal Tip Pen</string>
    <string name="big">Big Tip Pen</string>
    <string name="custom">Custom Tip Pen</string>
    <string name="change">Change Size</string>

    <!-- image dialog -->
    <string name="choose_image">Image</string>

    <!-- version update -->
    <string name="title_changelog">Change log</string>
    <string name="changelog_close">Close</string>

    <!-- about us -->
    <string name="setting_about_us">About us</string>
	<string name="setting_about_description">
        《NotesShare》 is aimed to help you draw a notes by hand that displays your personality and something special.
        Also you can share your notes on social networking sites. Made by Timothy and Shuang.
	    Contact us through email at notessharens@gmail.com</string>
    <string name="close">Close</string>.

    <string name="save_pic">save</string>
    <string name="clear_pic">clear</string>
    <string name="redo_pic">redo</string>
    <string name="undo_pic">undo</string>
    <string name="size_pic">size</string>
    <string name="save_file">Save</string>
    <string name="size_menu">Size</string>
    <string name="clear">Clear</string>

</resources>
